Add first round of scripted tests
Preliminary testing on sbt-buildinfo integration.